--- a/fesapade/src/app/components/dashboardfederado/dashboardfederado.component.html
+++ b/fesapade/src/app/components/dashboardfederado/dashboardfederado.component.html
@@ -132,22 +132,22 @@
           <div class="sidebar__menu">
             <div class="sidebar__link">
               <i class="fa fa-home"></i>
-              <a href="#">Home</a>
+              <a routerLink="/index">Home</a>
             </div>
             <h2>Acciones</h2>
             <div class="sidebar__link active_menu_link">
               <i class="fa fa-th-list" aria-hidden="true"></i>
-              <a href="#">Mis cursos</a>
+              <a routerLink="/dashfederado">Mis cursos</a>
             </div>
             <div class="sidebar__link">
               <i class="fa fa-check-square-o" aria-hidden="true"></i>
-              <a href="#">Notas</a>
+              <a routerLink="/notas-federado">Notas</a>
             </div>
   
             <h2>Perfil</h2>
             <div class="sidebar__link">
               <i class="fa fa-pencil-square-o"></i>
-              <a href="#">Editar mi perfil</a>
+              <a routerLink="/edit-perfil-federado">Editar mi perfil</a>
             </div>
             <div class="sidebar__logout">
               <i class="fa fa-sign-out"></i>
