--- a/fesapade/src/app/components/administrarpubs/administrarpubs.component.css
+++ b/fesapade/src/app/components/administrarpubs/administrarpubs.component.css
@@ -127,168 +127,20 @@ main {
   font-weight: 700;
   color: #a5aaad;
 }
-
-.main__cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 30px;
-  margin: 20px 0;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 70px;
-  padding: 25px;
-  border-radius: 5px;
-  background: #ffffff;
-  box-shadow: 5px 5px 13px #ededed, -5px -5px 13px #ffffff;
-}
-
-.card_inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.card_inner > span {
-  font-size: 25px;
-}
-
-.charts {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 30px;
-  margin-top: 50px;
-}
-
-.charts__left {
-  padding: 25px;
-  border-radius: 5px;
-  background: #ffffff;
-  box-shadow: 5px 5px 13px #ededed, -5px -5px 13px #ffffff;
-}
-
-.charts__left__title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.charts__left__title > div > h1 {
-  font-size: 24px;
-  color: #2e4a66;
-  margin-bottom: 5px;
-}
-
-.charts__left__title > div > p {
-  font-size: 14px;
-  font-weight: 700;
-  color: #a5aaad;
-}
-
-.charts__left__title > i {
-  color: #ffffff;
-  font-size: 20px;
-  background: #ffc100;
-  border-radius: 200px 0px 200px 200px;
-  -moz-border-radius: 200px 0px 200px 200px;
-  -webkit-border-radius: 200px 0px 200px 200px;
-  border: 0px solid #000000;
-  padding: 15px;
-}
-
-.charts__right {
-  padding: 25px;
-  border-radius: 5px;
-  background: #ffffff;
-  box-shadow: 5px 5px 13px #ededed, -5px -5px 13px #ffffff;
-}
-
-.charts__right__title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.charts__right__title > div > h1 {
-  font-size: 24px;
-  color: #2e4a66;
-  margin-bottom: 5px;
-}
-
-.charts__right__title > div > p {
-  font-size: 14px;
-  font-weight: 700;
-  color: #a5aaad;
-}
-
-.charts__right__title > i {
-  color: #ffffff;
-  font-size: 20px;
-  background: #39447a;
-  border-radius: 200px 0px 200px 200px;
-  -moz-border-radius: 200px 0px 200px 200px;
-  -webkit-border-radius: 200px 0px 200px 200px;
-  border: 0px solid #000000;
-  padding: 15px;
-}
-
-.charts__right__cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  margin-top: 30px;
-}
-
-.card1 {
-  background: #d1ecf1;
-  color: #35a4ba;
-  text-align: center;
-  padding: 25px;
-  border-radius: 5px;
-  font-size: 14px;
-}
-
-.card2 {
-  background: #d2f9ee;
-  color: #38e1b0;
-  text-align: center;
-  padding: 25px;
-  border-radius: 5px;
-  font-size: 14px;
-}
-
-.card3 {
-  background: #d6d8d9;
-  color: #3a3e41;
-  text-align: center;
-  padding: 25px;
-  border-radius: 5px;
-  font-size: 14px;
-}
-
-.card4 {
-  background: #fddcdf;
-  color: #f65a6f;
-  text-align: center;
-  padding: 25px;
-  border-radius: 5px;
-  font-size: 14px;
-}
 /*  table STARTS HERE  */
 thead{
-  background:#364151 ;
-  color: white;
+    background:#364151 ;
+    color: white;
 }
 .table button{
-  padding: 0 2rem;
+    padding: 0 2rem;
 }
 .table .btn{
-  padding: 3px 6px;
+    padding: 3px 6px;
 }
 /*  end table  */
+
+
 /*  SIDEBAR STARTS HERE  */
 
 #sidebar {
@@ -390,6 +242,17 @@ thead{
   left: 0 !important;
   position: absolute;
 }
+@media only screen and (max-width: 1024px) {
+    .section-4 .card{
+        width: 15rem;
+        margin-top: 4vmin;
+    }
+
+    .section-4 .team{
+        padding: 0n 4vmin;
+    }
+
+  }
 
 @media only screen and (max-width: 978px) {
   .container {
@@ -426,6 +289,24 @@ thead{
     margin-top: 30px;
   }
 }
+
+@media only screen and (max-width: 768px) {
+
+    .section-4 .team{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        margin-bottom: 2rem;
+    }
+
+    .section-4 .carousel-inner{
+        width: 14rem;
+        
+        
+    }
+
+    
+  }
 
 @media only screen and (max-width: 480px) {
   .navbar__left {
