--- a/fesapade/src/app/components/log-in/log-in.component.html
+++ b/fesapade/src/app/components/log-in/log-in.component.html
@@ -8,7 +8,7 @@
   <header>
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <a class="navbar-brand" routerLink="/index"><img src="../../../assets/logo.png" width="30" height="30"
+        <a class="navbar-brand" routerLink="/index"><img src="../../../assets/fesapadelogo.png" width="45"
             class="d-inline-block align-top" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
