--- a/fesapade/src/app/components/cursos/cursos.component.css
+++ b/fesapade/src/app/components/cursos/cursos.component.css
@@ -46,8 +46,8 @@ header .navbar-brand:hover{
     
 }
 nav img:hover{
-    width: 45px;
-    height: 45px;
+    width: 55px;
+
     transition: all 0.5s ease;
 }
 /*end menu*/
@@ -145,7 +145,7 @@ footer p > span{
     color: #007bff;
 }
 
-.column i+i{
+.column a+a{
     padding: 0 0.4em;
 }
 /*end footer*/
