--- a/fesapade/src/app/components/cursos/cursos.component.html
+++ b/fesapade/src/app/components/cursos/cursos.component.html
@@ -6,7 +6,7 @@
 <header>
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-            <a class="navbar-brand" routerLink="/index"><img src="../../../assets/logo.png" width="30" height="30"
+            <a class="navbar-brand" routerLink="/index"><img src="../../../assets/fesapadelogo.png" width="45"
                     class="d-inline-block align-top" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,8 +27,18 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#">About</a>
                     </li>
-                    <li class="nav-item active">
-                        <button class="btn btn-outline-primary my-2 my-sm-0">Log In</button>
+                    <li class="nav-item active" *ngIf="loginbtn">
+                        <a class="btn btn-outline-primary my-2 my-sm-0" routerLink="/login">Log In</a>
+                    </li>
+                    <li class="nav-item active" *ngIf="logoutbtn">
+                        <a class="btn btn-outline-primary my-2 my-sm-0" (click)="redirect()">
+                            Perfil
+                        </a>
+                    </li>
+                    <li class="nav-item active" *ngIf="logoutbtn">
+                        <a class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">
+                            Cerrar Sesión
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -61,7 +71,7 @@
                             </p>
                             <p class="text-black-50">Precio: $300.00</p>
                             <br><br>
-                            <div class="btn-content">   
+                            <div class="btn-content">
                                 <button class="btn2">Ver más</button>
 
                             </div>
@@ -86,9 +96,9 @@
                                 </p>
                                 <p class="text-black-50">Precio: $200.00</p>
                                 <br><br>
-                                <div class="btn-content">   
+                                <div class="btn-content">
                                     <button class="btn2">Ver más</button>
-    
+
                                 </div>
                             </div>
                         </div>
@@ -111,7 +121,7 @@
                             </p>
                             <p class="text-black-50">Precio: $150.00</p>
                             <br><br>
-                            <div class="btn-content">   
+                            <div class="btn-content">
                                 <button class="btn2">Ver más</button>
 
                             </div>
@@ -126,36 +136,35 @@
     <!--end section 1-->
     <footer>
         <div class="container-fluid p-0">
-            <div class="row text-left">
-                <div class="col-md-5 col-md-5">
-                    <h1 class="text-light">About Us</h1>
-                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem illo et
-                        dolores!</p>
-                    <p class="pt-4 text-muted">Copyright ©2021 All rights reserved|Developed By <span>R.Coto and
-                            A.Vladimir</span>
-                    </p>
-                </div>
-                <div class="col-md-5">
-                    <h4 class="text-light">Nuestros Cursos</h4>
-                    <li class="text-muted">Lorem, ipsum dolor.</li>
-                    <li class="text-muted">Lorem, ipsum dolor.</li>
-                    <li class="text-muted">Lorem, ipsum dolor.</li>
-                    <li class="text-muted">Lorem, ipsum dolor.</li>
-                </div>
-                <div class="col-md-2 col-sm-12">
-                    <h4 class="text-light">Síguenos</h4>
-                    <p class="text-muted">Seamos sociables</p>
-                    <div class="column">
-                        <i class="fa fa-facebook-f"></i>
-                        <i class="fa fa-instagram"></i>
-                        <i class="fa fa-twitter"></i>
-                        <i class="fa fa-youtube-play"></i>
-                    </div>
-                </div>
-
-
+          <div class="row text-left">
+            <div class="col-md-5 col-md-5">
+              <h1 class="text-light">About Us</h1>
+              <p class="text-muted">La Federación Salvadoreña de Paracaidismo y Aerodeportes (FESAPADE) es una Federación
+                Deportivo Nacional que engloba todos los Deportes Aéreos en el país.</p>
+              <p class="pt-4 text-muted">Copyright ©2021 All rights reserved|Developed By <span>R.Coto and A.Vladimir</span>
+              </p>
             </div>
+            <div class="col-md-5">
+              <h4 class="text-light">Nuestros Cursos</h4>
+              <li class="text-muted">Paracaidismo básico.</li>
+              <li class="text-muted">Empaque.</li>
+              <li class="text-muted">Salto con línea.</li>
+              <li class="text-muted">Entrenamiento físico y teórico.</li>
+            </div>
+            <div class="col-md-2 col-sm-12">
+              <h4 class="text-light">Síguenos</h4>
+              <p class="text-muted">Seamos sociables</p>
+              <div class="column">
+                <a href="https://es-la.facebook.com/FESAPADE/"><i class="fa fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/fesapade/"><i class="fa fa-instagram"></i></a>
+                <a href="https://twitter.com/FESAPADE"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.youtube.com/channel/UCKwNhAzIUdsQsTo7Uf4R_DQ/featured"><i class="fa fa-youtube-play"></i></a>
+              </div>
+            </div>
+    
+    
+          </div>
         </div>
-    </footer>
+      </footer>
 
 </body>
