--- a/fesapade/src/app/components/editarperfederado/editarperfederado.component.html
+++ b/fesapade/src/app/components/editarperfederado/editarperfederado.component.html
@@ -94,7 +94,7 @@
         <div id="sidebar" [ngClass]="{sidebar_responsive: contentHighlighted}">
             <div class="sidebar__title">
                 <div class="sidebar__img">
-                    <img src="../../../assets/logo.png" alt="logo" />
+                    <img src="../../../assets/fesapadelogo.png" alt="logo" />
                     <h1>Fesapade</h1>
                 </div>
                 <i *ngIf="contentHighlighted" (click)="contentHighlighted = false" class="fa fa-times" id="sidebarIcon"
@@ -111,19 +111,19 @@
                     <i class="fa fa-th-list" aria-hidden="true"></i>
                     <a routerLink="/dashfederado">Mis cursos</a>
                 </div>
-                <div class="sidebar__link active_menu_link">
+                <div class="sidebar__link">
                     <i class="fa fa-check-square-o" aria-hidden="true"></i>
-                    <a href="#">Notas</a>
+                    <a routerLink="/notas-federado">Notas</a>
                 </div>
 
                 <h2>Perfil</h2>
-                <div class="sidebar__link">
+                <div class="sidebar__link active_menu_link">
                     <i class="fa fa-pencil-square-o"></i>
                     <a routerLink="/edit-perfil-federado">Editar mi perfil</a>
                 </div>
-                <div class="sidebar__logout">
+                <div class="sidebar__logout" *ngIf="logoutbtn">
                     <i class="fa fa-sign-out"></i>
-                    <a href="#">Cerrar sesión</a>
+                    <a routerLink="/login" (click)="logout()">Cerrar sesión</a>
                 </div>
             </div>
         </div>
