--- a/fesapade/src/app/components/editarperfil/editarperfil.component.html
+++ b/fesapade/src/app/components/editarperfil/editarperfil.component.html
@@ -94,7 +94,7 @@
         <div id="sidebar" [ngClass]="{sidebar_responsive: contentHighlighted}">
             <div class="sidebar__title">
                 <div class="sidebar__img">
-                    <img src="../../../assets/logo.png" alt="logo" />
+                    <img src="../../../assets/fesapadelogo.png" alt="logo" />
                     <h1>Fesapade</h1>
                 </div>
                 <i *ngIf="contentHighlighted" (click)="contentHighlighted = false" class="fa fa-times" id="sidebarIcon"
@@ -124,11 +124,11 @@
                 <h2>Perfil</h2>
                 <div class="sidebar__link active_menu_link">
                     <i class="fa fa-pencil-square-o"></i>
-                    <a href="#">Editar mi perfil</a>
+                    <a routerLink="/edit-perfil">Editar mi perfil</a>
                 </div>
-                <div class="sidebar__logout">
+                <div class="sidebar__logout" *ngIf="logoutbtn">
                     <i class="fa fa-sign-out"></i>
-                    <a href="#">Cerrar sesión</a>
+                    <a routerLink="/login" (click)="logout()">Cerrar sesión</a>
                 </div>
             </div>
         </div>
