--- a/fesapade/src/app/components/editarpublicacion/editarpublicacion.component.html
+++ b/fesapade/src/app/components/editarpublicacion/editarpublicacion.component.html
@@ -92,7 +92,7 @@
         <div id="sidebar" [ngClass]="{sidebar_responsive: contentHighlighted}">
           <div class="sidebar__title">
             <div class="sidebar__img">
-              <img src="../../../assets/logo.png" alt="logo"/>
+              <img src="../../../assets/fesapadelogo.png" alt="logo"/>
               <h1>Fesapade</h1>
             </div>
             <i
@@ -126,12 +126,12 @@
             <h2>Perfil</h2>
             <div class="sidebar__link">
               <i class="fa fa-pencil-square-o"></i>
-              <a href="#">Editar mi perfil</a>
+              <a routerLink="/edit-perfil">Editar mi perfil</a>
             </div>
-            <div class="sidebar__logout">
+            <div class="sidebar__logout" *ngIf="logoutbtn">
               <i class="fa fa-sign-out"></i>
-              <a href="#">Cerrar sesión</a>
-            </div>
+              <a routerLink="/login" (click)="logout()">Cerrar sesión</a>
+          </div>
           </div>
         </div>
       </div>
