--- a/fesapade/src/app/components/galeria/galeria.component.css
+++ b/fesapade/src/app/components/galeria/galeria.component.css
@@ -44,8 +44,7 @@ header .navbar-brand:hover{
     
 }
 nav img:hover{
-    width: 45px;
-    height: 45px;
+    width: 55px;
     transition: all 0.5s ease;
 }
 /*end menu*/
@@ -116,7 +115,7 @@ footer p > span{
     color: #007bff;
 }
 
-.column i+i{
+.column a+a{
     padding: 0 0.4em;
 }
 /*end footer*/
