--- a/fesapade/src/app/components/admineditarcurso/admineditarcurso.component.html
+++ b/fesapade/src/app/components/admineditarcurso/admineditarcurso.component.html
@@ -44,7 +44,7 @@
                             <div class="form-group col-md-5">
                                 <label for="formGroupExampleInput">Nombre</label>
                                 <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control"
-                                    id="formGroupExampleInput" autocomplete="off">
+                                    id="formGroupExampleInput" autocomplete="off" [(ngModel)]="curs.nombre">
                             </div>
 
                         </div>
@@ -52,7 +52,7 @@
                     <div class="alingboton">
                         <div class="form-group col-md-8">
                             <label for="exampleFormControlTextarea1">Descripción</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" [(ngModel)]="curs.descripcion"></textarea>
                         </div>
                     </div>
                     <div class="alingtitu">
@@ -60,7 +60,7 @@
                             <div class="form-group col-md-5">
                                 <div class="alingboton">
                                     <label for="exampleFormControlFile1">Imagen de portada</label>
-                                    <input type="file" class="form-control-file" id="exampleFormControlFile1" required>
+                                    <input type="file" class="form-control-file" id="exampleFormControlFile1" [(ngModel)]="curs.portada"required>
                                 </div>
                             </div>
                             <div class="form-group col-md-5">
