--- a/fesapade/src/app/components/administrador/administrador.component.html
+++ b/fesapade/src/app/components/administrador/administrador.component.html
@@ -147,7 +147,7 @@
           </div>
           <div class="sidebar__logout">
             <i class="fa fa-sign-out"></i>
-            <a href="#">Cerrar sesión</a>
+            <a (click)="logout()">Cerrar sesión</a>
           </div>
         </div>
       </div>
