--- a/fesapade/src/app/components/administrarcursos/administrarcursos.component.html
+++ b/fesapade/src/app/components/administrarcursos/administrarcursos.component.html
@@ -45,37 +45,22 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">Otto</th>
-                            <td>Mark</td>
+                        <tr  *ngFor="let curs of cursos">
+                            <th scope="row">{{curs.nombre}}</th>
+                            <td>{{curs.descripcion}}</td>
                             <td>
                                 <div class="btn-group">
                                     <a type="button" routerLink="/admin-editar-curso" class="btn btn-primary btn-lg"
-                                        title="Editar"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                                        title="Editar" (click)="editar(curs.id_curso)"  ><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                                     <a type="button" routerLink="/asignar-curso-instructor" class="btn btn-info btn-lg" title="Asignar instructor a curso"><i
                                             class="fa fa-exchange" aria-hidden="true"></i></a>
-                                    <a type="button" class="btn btn-danger btn-lg" title="Eliminar"><i
-                                            class="fa fa-trash-o" aria-hidden="true"></i></a>
+                                    <a type="button" class="btn btn-danger btn-lg" title="Eliminar" (click)="eliminar(curs.id_curso)" ><i
+                                            class="fa fa-trash-o"  aria-hidden="true"></i></a>
 
 
                                 </div>
                         </tr>
-                        <tr>
-                            <th scope="row">Thornton</th>
-                            <td>Jacob</td>
-                            <td>
-                                <div class="btn-group">
-                                    <a type="button" routerLink="/admin-editar-curso" class="btn btn-primary btn-lg"
-                                        title="Editar"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                                    <a type="button" routerLink="/asignar-curso-instructor" class="btn btn-info btn-lg" title="Asignar instructor a curso"><i
-                                            class="fa fa-exchange" aria-hidden="true"></i></a>
-                                    <a type="button" class="btn btn-danger btn-lg" title="Eliminar"><i
-                                            class="fa fa-trash-o" aria-hidden="true"></i></a>
-
-
-                                </div>
-                            </td>
-                        </tr>
+                       
                     </tbody>
                 </table>
                 <!-- MAIN TITLE ENDS HERE -->
