--- a/fesapade/src/app/components/addpublicacion/addpublicacion.component.html
+++ b/fesapade/src/app/components/addpublicacion/addpublicacion.component.html
@@ -101,7 +101,7 @@
                     <i class="fa fa-home"></i>
                     <a href="#">Home</a>
                 </div>
-                <h2>Anuncios y evaluaciones</h2>
+                <h2>Anuncios y publicaciones</h2>
                 <div class="sidebar__link active_menu_link">
                     <i class="fa fa-plus" aria-hidden="true"></i>
                     <a routerLink="/add-publicacion">Agregar publicación</a>
@@ -109,6 +109,15 @@
                 <div class="sidebar__link">
                     <i class="fa fa-wrench"></i>
                     <a routerLink="/admin-publicacion">Administrar publicaciones</a>
+                </div>
+                <h2>Evaluaciones</h2>
+                <div class="sidebar__link ">
+                    <i class="fa fa-plus" ></i>
+                    <a routerLink="/add-evaluacion">Agregar evaluación</a>
+                </div>
+                <div class="sidebar__link">
+                    <i class="fa fa-wrench"></i>
+                    <a routerLink="/admin-evaluacion">Administrar evaluaciones</a>
                 </div>
 
                 <h2>Académico</h2>
