--- a/fesapade/src/app/components/editarperfederado/editarperfederado.component.html
+++ b/fesapade/src/app/components/editarperfederado/editarperfederado.component.html
@@ -40,29 +40,47 @@
 
                 <!-- MAIN TITLE ENDS HERE -->
                 <!--Inicio de contenido-->
-                <form #editpublicacionForm="ngForm">
+                <form #validatedForm="ngForm">
                     <div class="alingtitu">
                         <div class="form-row">
                             <div class="form-group col-md-5">
                                 <label for="formGroupExampleInput">Nombres</label>
-                                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control"
-                                    id="formGroupExampleInput" autocomplete="off">
-
+                                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control"  #nomC="ngModel" 
+                                    id="formGroupExampleInput" autocomplete="off" [(ngModel)]="feds.nombre" name="nombre">
+                                    <div *ngIf="(nomC.invalid && (nomC.dirty || nomC.touched))">
+                                        <p class="text-danger" *ngIf="nomC.errors.pattern">Solo se permiten letras</p>
+                                        <p class="text-danger" *ngIf="nomC.errors.required">Campo requerido</p>                    
+                                    </div>
 
                             </div>
                             <div class="form-group col-md-5">
                                 <label for="formGroupExampleInput">Apellidos</label>
-                                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control"
-                                    id="formGroupExampleInput1" autocomplete="off">
-
+                                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control" #apelC="ngModel" 
+                                    id="formGroupExampleInput1" autocomplete="off" [(ngModel)]="feds.apellido" name="apellido">
+                                    <div *ngIf="(apelC.invalid && (apelC.dirty || apelC.touched))">
+                                        <p class="text-danger" *ngIf="apelC.errors.pattern">Solo se permiten letras</p>
+                                        <p class="text-danger" *ngIf="apelC.errors.required">Campo requerido</p>                    
+                                    </div>
 
                             </div>
                             <div class="form-group col-md-10">
                                 <label for="formGroupExampleInput">Dirección</label>
-                                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control"
-                                    id="formGroupExampleInput2" autocomplete="off">
+                                <input type="text" required pattern="^[#.0-9a-zA-ZñÑáéíóúÁÉÍÓÚ\s,-]+$" class="form-control" #dirC="ngModel" 
+                                    id="formGroupExampleInput2" autocomplete="off" [(ngModel)]="feds.direccion" name="direccion">
+                                    <div *ngIf="(dirC.invalid && (dirC.dirty || dirC.touched))">    
+                                        <p class="text-danger" *ngIf="dirC.errors.required">Campo requerido</p> 
+                                        <p class="text-danger" *ngIf="dirC.errors.pattern">Solo se permiten comas</p>                        
+                                    </div>
 
-
+                            </div>
+                            <div class="form-group col-md-5">
+                                <label for="formGroupExampleInput">Contraseña</label>
+                                <input type="password" required class="form-control" id="formGroupExampleInput4" #passwdC="ngModel" 
+                                    autocomplete="off"  minlength="8" [(ngModel)]="feds.password" name="password">
+                                    <div *ngIf="(passwdC.invalid && (passwdC.dirty || passwdC.touched))">                    
+                                        <p class="text-danger" *ngIf="passwdC.errors.required">Campo requerido</p>      
+                                        <p class="text-danger" *ngIf="passwdC.errors.minlength">Debe tener 8 caracteres como minimo</p>               
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -70,20 +88,22 @@
                         <div class="form-row">
                             <div class="form-group col-md-5">
                                 <label for="formGroupExampleInput">Email</label>
-                                <input type="email" required pattern="^[a-zA-Z\s]*$" class="form-control"
-                                    id="formGroupExampleInput3" autocomplete="off">
+                                <input type="email" required  pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}" 
+                                class="form-control" id="formGroupExampleInput3" autocomplete="off" 
+                                [(ngModel)]="feds.email" name="email" #emaC="ngModel">
+                                <div *ngIf="(emaC.invalid && (emaC.dirty || emaC.touched))">
+                                    <p class="text-danger" *ngIf="emaC.errors.pattern">Formato de email incorrecto</p>
+                                    <p class="text-danger" *ngIf="emaC.errors.required">Campo requerido</p>                    
+                                </div>
                             </div>
-                            <div class="form-group col-md-5">
-                                <label for="formGroupExampleInput">Contraseña</label>
-                                <input type="password" class="form-control" id="formGroupExampleInput4"
-                                    autocomplete="off">
-                            </div>
+
+                           
+
                         </div>
                     </div>
-
                     <br>
                     <div class="alingboton">
-                        <button type="submit" class="btn btn-primary btn-md">Actualizar</button>
+                        <button type="submit" class="btn btn-primary btn-md" *ngIf="feds.id_federado !== 0" (click)="modificacion()"  [disabled]="!validatedForm.form.valid">Actualizar</button>
                     </div>
                 </form>
                 <!--Fin de contenido-->
