--- a/fesapade/src/app/components/editarpublicacion/editarpublicacion.component.html
+++ b/fesapade/src/app/components/editarpublicacion/editarpublicacion.component.html
@@ -91,49 +91,54 @@
   
         <div id="sidebar" [ngClass]="{sidebar_responsive: contentHighlighted}">
           <div class="sidebar__title">
-            <div class="sidebar__img">
-              <img src="../../../assets/fesapadelogo.png" alt="logo"/>
-              <h1>Fesapade</h1>
-            </div>
-            <i
-            *ngIf="contentHighlighted" (click)="contentHighlighted = false"
-              class="fa fa-times"
-              id="sidebarIcon"
-              aria-hidden="true"
-            ></i>
+              <div class="sidebar__img">
+                  <img src="../../../assets/fesapadelogo.png" alt="logo" />
+                  <h1>Fesapade</h1>
+              </div>
+              <i *ngIf="contentHighlighted" (click)="contentHighlighted = false" class="fa fa-times" id="sidebarIcon"
+                  aria-hidden="true"></i>
           </div>
-  
+
           <div class="sidebar__menu">
-            <div class="sidebar__link">
-              <i class="fa fa-home"></i>
-              <a href="#">Home</a>
-            </div>
-            <h2>Anuncios y evaluaciones</h2>
-            <div class="sidebar__link">
-              <i class="fa fa-plus" aria-hidden="true"></i>
-              <a routerLink="/add-publicacion">Agregar publicación</a>
-            </div>
-            <div class="sidebar__link active_menu_link">
-              <i class="fa fa-wrench"></i>
-              <a routerLink="/admin-publicacion">Administrar publicaciones</a>
-            </div>
-  
-            <h2>Académico</h2>
-            <div class="sidebar__link" >
-              <i class="fa fa-th-list"></i>
-              <a routerLink="/instructor">Mis cursos</a>
-            </div>
-            <h2>Perfil</h2>
-            <div class="sidebar__link">
-              <i class="fa fa-pencil-square-o"></i>
-              <a routerLink="/edit-perfil">Editar mi perfil</a>
-            </div>
-            <div class="sidebar__logout" *ngIf="logoutbtn">
-              <i class="fa fa-sign-out"></i>
-              <a routerLink="/login" (click)="logout()">Cerrar sesión</a>
+              <div class="sidebar__link">
+                  <i class="fa fa-home"></i>
+                  <a href="#">Home</a>
+              </div>
+              <h2>Anuncios y publicaciones</h2>
+              <div class="sidebar__link ">
+                  <i class="fa fa-plus" aria-hidden="true" ></i>
+                  <a routerLink="/add-publicacion">Agregar publicación</a>
+              </div>
+              <div class="sidebar__link active_menu_link">
+                  <i class="fa fa-wrench "></i>
+                  <a routerLink="/admin-publicacion">Administrar publicaciones</a>
+              </div>
+              <h2>Evaluaciones</h2>
+              <div class="sidebar__link ">
+                  <i class="fa fa-plus" ></i>
+                  <a routerLink="/add-evaluacion">Agregar evaluación</a>
+              </div>
+              <div class="sidebar__link">
+                  <i class="fa fa-wrench"></i>
+                  <a routerLink="/admin-evaluacion">Administrar evaluaciones</a>
+              </div>
+
+              <h2>Académico</h2>
+              <div class="sidebar__link">
+                  <i class="fa fa-th-list"></i>
+                  <a routerLink="/instructor">Mis cursos</a>
+              </div>
+              <h2>Perfil</h2>
+              <div class="sidebar__link active_menu_link">
+                  <i class="fa fa-pencil-square-o" ></i>
+                  <a routerLink="/edit-perfil">Editar mi perfil</a>
+              </div>
+              <div class="sidebar__logout" *ngIf="logoutbtn">
+                  <i class="fa fa-sign-out"></i>
+                  <a routerLink="/login" (click)="logout()">Cerrar sesión</a>
+              </div>
           </div>
-          </div>
-        </div>
+      </div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
       <script src="script.js"></script>
