--- a/fesapade/src/app/components/administrarevaluaciones/administrarevaluaciones.component.html
+++ b/fesapade/src/app/components/administrarevaluaciones/administrarevaluaciones.component.html
@@ -31,7 +31,7 @@
                 <div class="main__title">
 
                     <div class="main__greeting">
-                        <h1>Administrar publicaciones</h1>
+                        <h1>Administrar Evaluaciones</h1>
                         <br>
                     </div>
                 </div>
